Fix bug 15 Long words exceeded the limit of its container Fixed: word wrapping

--- a/app/assets/stylesheets/mobile_style.css.scss
+++ b/app/assets/stylesheets/mobile_style.css.scss
@@ -4096,7 +4096,7 @@ a.thumbnail:hover {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-}
+  word-wrap:break-word;
 .well blockquote {
   border-color: #ddd;
   border-color: rgba(0, 0, 0, 0.15);
@@ -4919,6 +4919,7 @@ body {
   padding-left:10px;
   background-color:#e5e5e5;
   border: 1px solid #C7C7C7; 
+  word-wrap:break-word;
 }
 .story-textarea-mobile{
   width:95%;
